grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    import_statement: $ => seq(
      'import',
      $._import_list,
    ),

    import_from_statement: $ => seq(
      'from',
      field('module_name', choice(
        $.relative_import,
        $.dotted_name,
      )),
      'import',
      choice(
        $.wildcard_import,
        $._import_list,
        seq('(', $._import_list, ')'),
      ),
    ),

    _import_list: $ => seq(
      commaSep1(field('name', choice(
        $.dotted_name,
        $.aliased_import,
      ))),
      optional(','),
    ),

    expression_statement: $ => choice(
      $.expression,
      seq(commaSep1($.expression), optional(',')),
      $.assignment,
      $.augmented_assignment,
      $.yield,
    ),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
    ),

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),

    function_definition: $ => seq(
      optional(
        choice(
          'async',
          'match',
          seq('async', 'match'),
          seq('match', 'async'),
        )
      ),
      'def',
      choice(
        seq(
          field('name', $.identifier),
          field('type_parameters', optional($.type_parameter)),
          field('parameters', $.parameters),
        ),
        seq(
          field('left', $._infix_parameter),
          '`',
          field('name', $.identifier),
          '`',
          field('right', $._infix_parameter),
        ),
      ),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      choice(
        seq(
          ':',
          field('body', $._suite),
        ),
        seq(
          '=',
          field('body', $._assignment_function_body),
          // field('body', choice(
          //   field('return', $.expression), // TODO this is the problem
          //   // alias($._assignment_function_body, $.block),
          // )),
        ),
      ),
    ),

    _assignment_function_body: $ => choice(
      seq(
        field('return', $.expression),
        $._newline,
      ),
      seq(
        $._indent,
        alias($.assignment_function_block, $.block),
      ),
      // I think this means that if you hit enter you get syntax highlighting even before typing body
      // alias($._newline, $.block),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    lambda_parameters: $ => $._parameters,

    type_alias_statement: $ => prec.dynamic(1, seq(
      'type',
      $.type,
      '=',
      $.type,
    )),

    class_definition: $ => seq(
      'class',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('superclasses', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    partial_argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
          $.deferred_argument,
          $.keyword_converted_to_positional,
        ),
      )),
      optional(','),
      ')',
    ),

    deferred_argument: $ => "?",

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec(1, sep1($.identifier, '.')),

    // Match cases

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    _patterns: $ => seq(
      commaSep1($.pattern),
      optional(','),
    ),
    
    _infix_parameter: $ => choice(
      $.identifier,
      seq(
        '(',
        $.default_parameter,
        ')',
      ),
      // TODO can infix parameters have any of the other types above?
    ),

    tuple_pattern: $ => seq(
      '(',
      optional($._patterns),
      ')',
    ),

    default_parameter: $ => seq(
      field('name', choice($.identifier, $.tuple_pattern)),
      '=',
      field('value', $.expression),
    ),

    boolean_operator: $ => choice(
      prec.left(PREC.and, seq(
        field('left', $.expression),
        field('operator', 'and'),
        field('right', $.expression),
      )),
      prec.left(PREC.or, seq(
        field('left', $.expression),
        field('operator', 'or'),
        field('right', $.expression),
      )),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '×', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '÷', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.left, '÷/', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.right, '↑', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '∪', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '∩', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '«', PREC.shift],
        [prec.left, '>>', PREC.shift],
        [prec.left, '»', PREC.shift],
        [prec.left, '??', PREC.none_coalesce],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    unary_operator: $ => prec(PREC.unary, seq(
      field('operator', choice('+', '-', '~', '⁻')),
      field('argument', $.primary_expression),
    )),

    _not_in: _ => seq('not', 'in'),

    _is_not: _ => seq('is', 'not'),

    comparison_operator: $ => prec.left(PREC.compare, seq(
      $.primary_expression,
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '⊊',
            '<=',
            '≤',
            '⊆',
            '==',
            '!=',
            '≠',
            '¬=',
            '>=',
            '≥',
            '⊇',
            '>',
            '⊋',
            '<>',
            'in',
            alias($._not_in, 'not in'),
            'is',
            alias($._is_not, 'is not'),
          )),
        $.primary_expression,
      )),
    )),

    // lambda: $ => prec(PREC.lambda, seq(
    //   'lambda',
    //   field('parameters', optional($.lambda_parameters)),
    //   ':',
    //   field('body', $.expression),
    // )),

    lambda: $ => prec(PREC.lambda, choice(
      seq(
        choice('lambda', 'λ'),
        field('parameters', optional($.lambda_parameters)),
        ':',
        field('body', $.expression),
      ),
      prec.right(seq(
        optional(field('parameters', alias(choice($.parameters, $.lambda_single_parameter), $.lambda_parameters))),
        choice('=>', '->', '⇒', '→'),
        field('body', $.expression),
      )),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    augmented_assignment: $ => seq(
      field('left', $._left_hand_side),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '@=', '//=', '%=', '**=',
        '>>=', '<<=', '&=', '^=', '|=',
        '|>=',
        '|*>=',
        '|**>=',
        '<|=',
        '<*|=',
        '<**|=',
        '|?>=',
        '|?*>=',
        '|?**>=',
        '<?|=',
        '<*?|=',
        '<**?|=',
        '..=',
        '..>=',
        '<..=',
        '..*>=',
        '<*..=',
        '..**>=',
        '<**..=',
        '..?>=',
        '<?..=',
        '..?*>=',
        '<*?..=',
        '..?**>=',
        '<**?..=',
        '::=',
        '??=',
      )),
      field('right', $._right_hand_side),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      // TOOD should these be seperate node types?
      field('operator', choice('.', '?.')),
      field('attribute', $.identifier),
    )),

    subscript: $ => prec(PREC.call, seq(
      field('value', $.primary_expression),
      field('operator', choice('[', '?[')),
      commaSep1(field('subscript', choice($.expression, $.slice))),
      optional(','),
      ']',
    )),

    slice: $ => seq(
      optional($.expression),
      ':',
      optional($.expression),
      optional(seq(':', optional($.expression))),
    ),

    iterator_slice: $ => prec(PREC.call, seq(
      field('value', $.primary_expression),
      '$[',
      commaSep1(field('subscript', choice($.expression, $.slice))),
      optional(','),
      ']',
    )),

    // TODO this doesn't seem to grab longer iterator chains
    iterator_chain: $ => prec(PREC.iterator_chain, seq(
      $.primary_expression,
      repeat1(seq(
        '::',
        $.primary_expression,
      )),
    )),

    ellipsis: _ => choice('...', '…'),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      optional('?'),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    infix_call: $ => prec.left(PREC.infix_call, seq(
      optional(field('left_argument', $.primary_expression)),
      '`',
      field('function', $.identifier),
      '`',
      optional(field('right_argument', $.primary_expression)),
    )),

    pipe: $ => choice(
      $._pipe_forward,
      $._pipe_backward,
    ),

    _pipe_forward: $ => prec.left(PREC.pipe, seq(
      field('from', $.primary_expression),
      field('operator', $._forward_pipe_operator),
      field('to', $._pipe_to_expression),
    )),

    _pipe_backward: $=> prec.left(PREC.pipe, seq(
      field('to', $._pipe_to_expression),
      field('operator', $._backward_pipe_operator),
      field('from', $.primary_expression),
    )),

    pipe_named_expression_partial: $ => seq(
      '(',
      field('name', $.identifier),
      /:=\s*\.\s*\)/,
    ),

    composition: $ => prec.right(PREC.composition, seq(
      field('left', $.primary_expression),
      choice('..', '∘'),
      field('right', $.primary_expression)
    )),

    composition_pipe: $ => choice(
      $._forward_composition_pipe,
      $._backward_composition_pipe,
    ),

    _forward_composition_pipe: $ => prec.left(PREC.composition_pipe, seq( // TODO shouldn't be left, at least not all the time
      field('left', $.primary_expression),
      field('operator', $._forward_composition_pipe_operator),
      field('right', $.primary_expression),
    )),
    
    _backward_composition_pipe: $ => prec.right(PREC.composition_pipe, seq( // TODO shouldn't be left, at least not all the time
      field('left', $.primary_expression),
      field('operator', $._backward_composition_pipe_operator),
      field('right', $.primary_expression),
    )),

    partial: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('operator', choice('$', '?$')),
      field('arguments', choice(
        $.generator_expression,
        $.partial_argument_list,
      )),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      $.expression,
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.protocol_intersection_type,
      $.constrained_type,
      $.member_type,
    ),
    protocol_intersection_type: $ => prec.left(seq($.type, '&:', $.type)),
    keyword_argument: $ => seq(
      field('name', choice($.identifier, $.keyword_identifier)),
      '=',
      field('value', $.expression),
    ),

    keyword_converted_to_positional: $ => seq(
      field('name', choice($.identifier, $.keyword_identifier)),
      '=',
      field('value', $.deferred_argument),
    ),
    
    // Literals

    tuple: $ => seq(
      '(',
      optional($._collection_elements),
      ')',
    ),

    dictionary: $ => seq(
      '{',
      optional(commaSep1(choice($.pair, $.dictionary_splat))),
      optional(','),
      '}',
    ),

    pair: $ => seq(
      field('key', $.expression),
      ':',
      field('value', $.expression),
    ),

    parenthesized_expression: $ => prec(PREC.parenthesized_expression, seq(
      '(',
      choice($.expression, $.yield),
      ')',
    )),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    conditional_expression: $ => prec.right(PREC.conditional, seq(
      $.expression,
      'if',
      $.expression,
      'else',
      $.expression,
    )),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE⏨][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
        optional(/[jJ]/),
      ));
    },

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    none: _ => 'None',

    await: $ => prec(PREC.unary, seq(
      'await',
      $.primary_expression,
    )),

    comment: _ => token(seq('#', /.*/)),
